--- a/templates/upload.html
+++ b/templates/upload.html
@@ -4,14 +4,15 @@
 
 <div class="image-container">
     <div class="row">
-        <div class="col-8 im-wrapper">
+        <div class="col-6 im-wrapper">
             <!--  default image where we will set the src via jquery-->
             <img id="image">
         </div>
+        <div class="col-2"></div>
         <div class="col-4 preview-container">
 
             <div class="preview-cover">
-                <div class="img-preview" style="height: 9rem; width: 16rem"></div>
+                <div class="img-preview" style="height:25rem; width: 50rem"></div>
             </div>
 
         </div>
